// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tree allFiles 1`] = `
"chain
└── alpha
    └── alpha
        └── alpha
            └── alpha
                └── alpha
                    └── alpha
                        └── alpha
                            └── alpha
                                └── alpha.txt"
`;

exports[`tree allFiles 2`] = `
"double-level
├── alpha.txt
└── beta
    └── alpha.txt"
`;

exports[`tree allFiles 3`] = `
"empty-dir
└── .gitkeep"
`;

exports[`tree allFiles 4`] = `
"multi-files
├── alpha.txt
├── beta.txt
└── charlie.txt"
`;

exports[`tree allFiles 5`] = `
"multi-level
├── alpha.txt
├── beta
│   ├── alpha
│   │   ├── alpha.txt
│   │   └── beta
│   │       ├── .gitkeep
│   │       └── alpha.txt
│   ├── beta.txt
│   └── charlie
│       └── alpha.txt
├── charlie
│   ├── .gitkeep
│   ├── alpha.txt
│   ├── beta
│   │   └── alpha.txt
│   └── charlie.txt
└── delta.txt"
`;

exports[`tree allFiles 6`] = `
"single-file
└── alpha.txt"
`;

exports[`tree allFiles 7`] = `
"single-level
├── alpha.txt
└── beta
    └── .gitkeep"
`;

exports[`tree default 1`] = `
"chain
└── alpha
    └── alpha
        └── alpha
            └── alpha
                └── alpha
                    └── alpha
                        └── alpha
                            └── alpha
                                └── alpha.txt"
`;

exports[`tree default 2`] = `
"double-level
├── alpha.txt
└── beta
    └── alpha.txt"
`;

exports[`tree default 3`] = `"empty-dir"`;

exports[`tree default 4`] = `
"multi-files
├── alpha.txt
├── beta.txt
└── charlie.txt"
`;

exports[`tree default 5`] = `
"multi-level
├── alpha.txt
├── beta
│   ├── alpha
│   │   ├── alpha.txt
│   │   └── beta
│   │       └── alpha.txt
│   ├── beta.txt
│   └── charlie
│       └── alpha.txt
├── charlie
│   ├── alpha.txt
│   ├── beta
│   │   └── alpha.txt
│   └── charlie.txt
└── delta.txt"
`;

exports[`tree default 6`] = `
"single-file
└── alpha.txt"
`;

exports[`tree default 7`] = `
"single-level
├── alpha.txt
└── beta"
`;

exports[`tree dirsFirst 1`] = `
"chain
└── alpha
    └── alpha
        └── alpha
            └── alpha
                └── alpha
                    └── alpha
                        └── alpha
                            └── alpha
                                └── alpha.txt"
`;

exports[`tree dirsFirst 2`] = `
"double-level
├── beta
│   └── alpha.txt
└── alpha.txt"
`;

exports[`tree dirsFirst 3`] = `"empty-dir"`;

exports[`tree dirsFirst 4`] = `
"multi-files
├── alpha.txt
├── beta.txt
└── charlie.txt"
`;

exports[`tree dirsFirst 5`] = `
"multi-level
├── beta
│   ├── alpha
│   │   ├── beta
│   │   │   └── alpha.txt
│   │   └── alpha.txt
│   ├── charlie
│   │   └── alpha.txt
│   └── beta.txt
├── charlie
│   ├── beta
│   │   └── alpha.txt
│   ├── alpha.txt
│   └── charlie.txt
├── alpha.txt
└── delta.txt"
`;

exports[`tree dirsFirst 6`] = `
"single-file
└── alpha.txt"
`;

exports[`tree dirsFirst 7`] = `
"single-level
├── beta
└── alpha.txt"
`;

exports[`tree dirsOnly 1`] = `
"chain
└── alpha
    └── alpha
        └── alpha
            └── alpha
                └── alpha
                    └── alpha
                        └── alpha
                            └── alpha"
`;

exports[`tree dirsOnly 2`] = `
"double-level
└── beta"
`;

exports[`tree dirsOnly 3`] = `"empty-dir"`;

exports[`tree dirsOnly 4`] = `"multi-files"`;

exports[`tree dirsOnly 5`] = `
"multi-level
├── beta
│   ├── alpha
│   │   └── beta
│   └── charlie
└── charlie
    └── beta"
`;

exports[`tree dirsOnly 6`] = `"single-file"`;

exports[`tree dirsOnly 7`] = `
"single-level
└── beta"
`;

exports[`tree exclude 1`] = `
"chain
└── alpha
    └── alpha
        └── alpha
            └── alpha
                └── alpha
                    └── alpha
                        └── alpha
                            └── alpha
                                └── alpha.txt"
`;

exports[`tree exclude 2`] = `
"double-level
├── alpha.txt"
`;

exports[`tree exclude 3`] = `"empty-dir"`;

exports[`tree exclude 4`] = `
"multi-files
├── alpha.txt
└── charlie.txt"
`;

exports[`tree exclude 5`] = `
"multi-level
├── alpha.txt
├── charlie
│   ├── alpha.txt
│   └── charlie.txt
└── delta.txt"
`;

exports[`tree exclude 6`] = `
"single-file
└── alpha.txt"
`;

exports[`tree exclude 7`] = `
"single-level
├── alpha.txt"
`;

exports[`tree exclude 8`] = `
"chain
└── alpha
    └── alpha
        └── alpha
            └── alpha
                └── alpha
                    └── alpha
                        └── alpha
                            └── alpha
                                └── alpha.txt"
`;

exports[`tree exclude 9`] = `
"double-level
├── alpha.txt
└── beta
    └── alpha.txt"
`;

exports[`tree exclude 10`] = `"empty-dir"`;

exports[`tree exclude 11`] = `
"multi-files
├── alpha.txt
├── beta.txt"
`;

exports[`tree exclude 12`] = `
"multi-level
├── alpha.txt
├── beta
│   ├── alpha
│   │   ├── alpha.txt
│   │   └── beta
│   │       └── alpha.txt
│   ├── beta.txt
└── delta.txt"
`;

exports[`tree exclude 13`] = `
"single-file
└── alpha.txt"
`;

exports[`tree exclude 14`] = `
"single-level
├── alpha.txt
└── beta"
`;

exports[`tree exclude 15`] = `
"chain
└── alpha
    └── alpha
        └── alpha
            └── alpha
                └── alpha
                    └── alpha
                        └── alpha
                            └── alpha
                                └── alpha.txt"
`;

exports[`tree exclude 16`] = `
"double-level
├── alpha.txt"
`;

exports[`tree exclude 17`] = `"empty-dir"`;

exports[`tree exclude 18`] = `
"multi-files
├── alpha.txt"
`;

exports[`tree exclude 19`] = `
"multi-level
├── alpha.txt
└── delta.txt"
`;

exports[`tree exclude 20`] = `
"single-file
└── alpha.txt"
`;

exports[`tree exclude 21`] = `
"single-level
├── alpha.txt"
`;

exports[`tree maxDepth 1`] = `
"chain
└── alpha"
`;

exports[`tree maxDepth 2`] = `
"double-level
├── alpha.txt
└── beta"
`;

exports[`tree maxDepth 3`] = `"empty-dir"`;

exports[`tree maxDepth 4`] = `
"multi-files
├── alpha.txt
├── beta.txt
└── charlie.txt"
`;

exports[`tree maxDepth 5`] = `
"multi-level
├── alpha.txt
├── beta
├── charlie
└── delta.txt"
`;

exports[`tree maxDepth 6`] = `
"single-file
└── alpha.txt"
`;

exports[`tree maxDepth 7`] = `
"single-level
├── alpha.txt
└── beta"
`;

exports[`tree maxDepth 8`] = `
"chain
└── alpha
    └── alpha"
`;

exports[`tree maxDepth 9`] = `
"double-level
├── alpha.txt
└── beta
    └── alpha.txt"
`;

exports[`tree maxDepth 10`] = `"empty-dir"`;

exports[`tree maxDepth 11`] = `
"multi-files
├── alpha.txt
├── beta.txt
└── charlie.txt"
`;

exports[`tree maxDepth 12`] = `
"multi-level
├── alpha.txt
├── beta
│   ├── alpha
│   ├── beta.txt
│   └── charlie
├── charlie
│   ├── alpha.txt
│   ├── beta
│   └── charlie.txt
└── delta.txt"
`;

exports[`tree maxDepth 13`] = `
"single-file
└── alpha.txt"
`;

exports[`tree maxDepth 14`] = `
"single-level
├── alpha.txt
└── beta"
`;

exports[`tree reverse 1`] = `
"chain
└── alpha
    └── alpha
        └── alpha
            └── alpha
                └── alpha
                    └── alpha
                        └── alpha
                            └── alpha
                                └── alpha.txt"
`;

exports[`tree reverse 2`] = `
"double-level
├── beta
│   └── alpha.txt
└── alpha.txt"
`;

exports[`tree reverse 3`] = `"empty-dir"`;

exports[`tree reverse 4`] = `
"multi-files
├── charlie.txt
├── beta.txt
└── alpha.txt"
`;

exports[`tree reverse 5`] = `
"multi-level
├── delta.txt
├── charlie
│   ├── charlie.txt
│   ├── beta
│   │   └── alpha.txt
│   └── alpha.txt
├── beta
│   ├── charlie
│   │   └── alpha.txt
│   ├── beta.txt
│   └── alpha
│       ├── beta
│       │   └── alpha.txt
│       └── alpha.txt
└── alpha.txt"
`;

exports[`tree reverse 6`] = `
"single-file
└── alpha.txt"
`;

exports[`tree reverse 7`] = `
"single-level
├── beta
└── alpha.txt"
`;

exports[`tree trailingSlash 1`] = `
"chain/
└── alpha/
    └── alpha/
        └── alpha/
            └── alpha/
                └── alpha/
                    └── alpha/
                        └── alpha/
                            └── alpha/
                                └── alpha.txt"
`;

exports[`tree trailingSlash 2`] = `
"double-level/
├── alpha.txt
└── beta/
    └── alpha.txt"
`;

exports[`tree trailingSlash 3`] = `"empty-dir/"`;

exports[`tree trailingSlash 4`] = `
"multi-files/
├── alpha.txt
├── beta.txt
└── charlie.txt"
`;

exports[`tree trailingSlash 5`] = `
"multi-level/
├── alpha.txt
├── beta/
│   ├── alpha/
│   │   ├── alpha.txt
│   │   └── beta/
│   │       └── alpha.txt
│   ├── beta.txt
│   └── charlie/
│       └── alpha.txt
├── charlie/
│   ├── alpha.txt
│   ├── beta/
│   │   └── alpha.txt
│   └── charlie.txt
└── delta.txt"
`;

exports[`tree trailingSlash 6`] = `
"single-file/
└── alpha.txt"
`;

exports[`tree trailingSlash 7`] = `
"single-level/
├── alpha.txt
└── beta/"
`;
